--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 
       <nav>
         <ul class="ul">
-          <li><a href="../qui_som/quisom.html" target="_blank" id="dalt"><b>Qui som?</b></a></li>
-          <li><a href="../com_fan/fer_cursos.html" target="_blank"><b>Com es pot fer els cursos?</b></a></li>
-          <li><a href="../cursos/inici_cursos.html" target="_blank"><b>Cursos</b></a></li>
-          <li><a href="../aprenentatge/aprenentatge.html" target="_blank" id="vaix"><b>Aprenentatge</b></a></li>
+          <li><a href="qui_som/quisom.html" target="_blank" id="dalt"><b>Qui som?</b></a></li>
+          <li><a href="com_fan/fer_cursos.html" target="_blank"><b>Com es pot fer els cursos?</b></a></li>
+          <li><a href="cursos/inici_cursos.html" target="_blank"><b>Cursos</b></a></li>
+          <li><a href="aprenentatge/aprenentatge.html" target="_blank" id="vaix"><b>Aprenentatge</b></a></li>
         </ul>
       </nav>
       <section>
