--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/generic.css">
     <link rel="stylesheet" href="css/cursos.css">
     <link rel="stylesheet" href="css/slideshow.css">
+    <meta name="keywords" content="web bafi, bafi, paguina web bafi, paguina bafi, pagina web bafi, pagina bafi, aleix, aleix ba, aleix bafl">
   </head>
   <body>
     <header>
