--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/cursos.css">
     <link rel="stylesheet" href="css/slideshow.css">
     <meta name="keywords" content="web bafi, bafi, paguina web bafi, paguina bafi, pagina web bafi, pagina bafi, aleix, aleix ba, aleix bafl, aleix bafi, qui som web bafi, bafi web">
+    <meta name="description" content="Web Bafi és una empresa de cursos de desenvolupament web tant de codi com de gestos de continguts.">
   </head>
   <body>
     <header>
