--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <h1>Web Bafi</h1>
     </header>
-    <img class="logo" src="img/logo.png" alt="logo">
+    <img class="logo" src="img/logo.png" alt="webbafi">
 
 
 
